Fix iframe display when wrapped by embed-responsive

--- a/resources/styles/components/task-step/all-steps.less
+++ b/resources/styles/components/task-step/all-steps.less
@@ -7,7 +7,10 @@
     border: none;
     margin: auto;
   }
-
+  .embed-responsive > iframe {
+    width: 100%;
+    height: 100%;
+  }
   .spacer-step {
     padding: @tutor-card-body-padding;
   }
